--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@
   font-family: Arial;
 }
 
+.pokemon-title{
+  text-align: center;
+}
+
+.pokemon-list{
+  text-align: center;
+  list-style: none;
+}
+
 .button {
   color: black;
   background-color: rgb(218, 218, 218);
@@ -16,4 +25,62 @@
   cursor: pointer;
   border-color: black;
   border-radius: 5px;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  
+  /* to show it above other content */
+  z-index: 999; 
+  
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+  
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.pokemon-image {
+  height: 50%;
+  width: 50%;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 700px;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: #777;
+  text-decoration: underline;
+}
+
+.modal h1 {
+  text-align: center;
+}
+
+.modal p {
+  margin-bottom: 0;
 }
